Change styles of website -- font.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Personal website" />
+    <meta name="description"
+        content="Steven Arellano's personal website - Software Engineer, Researcher, and Student" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Personal Website</title>
+    <title>Steven Arellano | Personal Website</title>
 </head>
 
 <body>
