Add better title.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="Steven Arellano's personal website - Software Engineer, Researcher, and Student" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Steven Arellano | Personal Website</title>
+    <title>steven arellano</title>
 </head>
 
 <body>
